# notes

./: .gitignore  README.md  c++.md  git.md  hello  parol-login from algocourses.md  test_draw.drawio  tips.md  todo.md
C++ algos/: 2d_pref_summ.cpp  DD.cpp  Drevo Otrezkov(easy_v).cpp  Drevo Otrezkov(mass_v).cpp  Fail input\output.cpp  GCD.cpp  LCA.cpp  LIS.cpp  Z-function.cpp  articulation_point.cpp  binpow.cpp  bor.cpp  dxtra.cpp  eratosfen.cpp  first_day.cpp  floid.cpp  heap.cpp  knapsnack.cpp  second_day.cpp  sparce_table.cpp
C++_algos/: NOP.cpp
algos_bench/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
algos_bench/benchmark/: bench_dijkstra.cpp  bench_heap.cpp  bench_knapsack.cpp  bench_lcs.cpp  bench_sparse_table.cpp
algos_bench/cmake/: FindSphinx.cmake
algos_bench/docs/source/: algorithms.rst  conf.py  index.rst
algos_bench/docs/source/api/: dijkstra.rst  heap.rst  knapsack.rst  lcs.rst  sparse_table.rst
algos_bench/src/: dijkstra.hpp  heap.hpp  knapsack.hpp  lcs.hpp  main_dijkstra.cpp  main_heap.cpp  main_knapsack.cpp  main_lcs.cpp  main_sparse_table.cpp  sparse_table.hpp
algos_bench/tests/: test_dijkstra.cpp  test_heap.cpp  test_knapsack.cpp  test_lcs.cpp  test_sparse_table.cpp
day_3/: first.cpp  fourth.cpp  second.cpp  third.cpp
day_4/: A.cpp  B.cpp  C.cpp
day_5/: A.cpp  B.cpp  C.cpp  D.cpp
examples/gtest/: CMakeLists.txt  code.cpp  tests.cpp
examples/hello/: hello  hello.cpp
